test: adding unit tests

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
             "src/Exceptions.php"
         ],
         "psr-4": {
-            "DouglasGreen\\Syntax\\": "src/"
+            "DouglasGreen\\Syntax\\": "src/",
+            "DouglasGreen\\Syntax\\Tests\\": "tests/"
         }
     },
     "require": {
@@ -18,6 +19,7 @@
         "douglasgreen/optparser": "^0.6",
         "phpmd/phpmd": "^2.15",
         "phpstan/phpstan": "^1.10",
+        "phpunit/phpunit": "^10.5",
         "rector/rector": "^1.0",
         "symplify/easy-coding-standard": "^12.2"
     },
@@ -31,6 +33,7 @@
         "lint:fix": [
             "ecs --fix",
             "rector"
-        ]
+        ],
+        "test": "phpunit"
     }
 }
