--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,33 @@
 {
-    "name": "douglasgreen/simple-universal-syntax",
+    "name": "douglasgreen/codesmith",
     "description": "A file to read a simple universal syntax and write other languages",
     "license": "MIT",
     "type": "project",
+    "homepage": "https://github.com/douglasgreen/codesmith",
+    "authors": [
+        {
+            "name": "Douglas Green",
+            "email": "douglas@nurd.site",
+            "homepage": "https://nurd.site/",
+            "role": "Developer"
+        }
+    ],
+    "keywords": [
+        "code generation",
+        "code parsing",
+        "code quality",
+        "code tools",
+        "formatting",
+        "language conversion",
+        "language support",
+        "language transpiler",
+        "linting",
+        "procedural design",
+        "recursive parser",
+        "syntax",
+        "syntax tree",
+        "universal syntax"
+    ],
     "autoload": {
         "files": [
             "src/Exceptions.php"
