--- a/composer.json
+++ b/composer.json
@@ -29,19 +29,24 @@
         "universal syntax"
     ],
     "autoload": {
-        "files": [
-            "src/Exceptions.php"
-        ],
         "psr-4": {
             "DouglasGreen\\CodeSmith\\": "src/",
             "DouglasGreen\\CodeSmith\\Tests\\": "tests/"
         }
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/douglasgreen/config-setup"
+        }
+    ],
     "require": {
         "php": ">=8.1"
     },
     "require-dev": {
-        "douglasgreen/optparser": "^0.7",
+        "douglasgreen/config-setup": "dev-main",
+        "douglasgreen/optparser": "dev-main",
+        "douglasgreen/utility": "dev-main",
         "phpmd/phpmd": "^2.15",
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^10.5",
@@ -58,6 +63,12 @@
         "lint:fix": [
             "ecs --fix",
             "rector"
+        ],
+        "post-install-cmd": [
+            "vendor/douglasgreen/config-setup/bin/copy_files.php"
+        ],
+        "post-update-cmd": [
+            "vendor/douglasgreen/config-setup/bin/copy_files.php"
         ],
         "test": "phpunit"
     }
