--- a/composer.json
+++ b/composer.json
@@ -39,26 +39,14 @@
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/douglasgreen/config-setup"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/douglasgreen/php-linter"
-        }
-    ],
     "require": {
-        "php": ">=8.1"
+        "php": ">=8.1",
+        "douglasgreen/utility": "dev-main"
     },
     "require-dev": {
-        "douglasgreen/config-setup": "dev-main",
-        "douglasgreen/optparser": "dev-main",
-        "douglasgreen/utility": "dev-main",
         "phpstan/phpstan": "^1.11",
         "phpunit/phpunit": "^10.5",
-        "rector/rector": "^1.1",
+        "rector/rector": "^1.2",
         "symplify/easy-coding-standard": "^12.3"
     },
     "scripts": {
