build: updating composer

--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,7 @@
 {
     "name": "douglasgreen/codesmith",
     "description": "A file to read a simple universal syntax and write other languages",
-    "license": "MIT",
     "type": "project",
-    "homepage": "https://github.com/douglasgreen/codesmith",
-    "authors": [
-        {
-            "name": "Douglas Green",
-            "email": "douglas@nurd.site",
-            "homepage": "https://nurd.site/",
-            "role": "Developer"
-        }
-    ],
     "keywords": [
         "code generation",
         "code parsing",
@@ -28,31 +18,48 @@
         "syntax tree",
         "universal syntax"
     ],
+    "homepage": "https://github.com/douglasgreen/codesmith",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "Douglas Green",
+            "email": "douglas@nurd.site",
+            "homepage": "https://nurd.site/",
+            "role": "Developer"
+        }
+    ],
+    "require": {
+        "php": ">=8.1",
+        "douglasgreen/opt-parser": "^0.5",
+        "douglasgreen/utility": "^0.5"
+    },
+    "require-dev": {
+        "douglasgreen/config-setup": "dev-main",
+        "phpstan/phpstan": "^1.11.9",
+        "phpunit/phpunit": "^10.5.29",
+        "rector/rector": "^1.2.2",
+        "symplify/easy-coding-standard": "^12.3.4"
+    },
     "autoload": {
         "psr-4": {
             "DouglasGreen\\CodeSmith\\": "src/",
             "DouglasGreen\\CodeSmith\\Tests\\": "tests/"
         }
     },
-    "config": {
-        "sort-packages": true
-    },
     "minimum-stability": "dev",
     "prefer-stable": true,
-    "require": {
-        "php": ">=8.1",
-        "douglasgreen/utility": "dev-main"
-    },
-    "require-dev": {
-        "phpstan/phpstan": "^1.11",
-        "phpunit/phpunit": "^10.5",
-        "rector/rector": "^1.2",
-        "symplify/easy-coding-standard": "^12.3"
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/douglasgreen/config-setup"
+        }
+    ],
+    "config": {
+        "sort-packages": true
     },
     "scripts": {
         "lint": [
             "ecs",
-            "php-linter",
             "phpstan analyse",
             "rector --dry-run"
         ],
@@ -60,8 +67,8 @@
             "ecs --fix",
             "rector"
         ],
-        "post-install-cmd": "config-setup --pre-commit",
-        "post-update-cmd": "config-setup --pre-commit",
+        "post-install-cmd": "config-setup",
+        "post-update-cmd": "config-setup",
         "test": "phpunit"
     }
 }
