--- a/composer.json
+++ b/composer.json
@@ -35,10 +35,11 @@
     },
     "require-dev": {
         "douglasgreen/config-setup": "dev-main",
-        "phpstan/phpstan": "^1.11.9",
-        "phpunit/phpunit": "^10.5.29",
-        "rector/rector": "^1.2.2",
-        "symplify/easy-coding-standard": "^12.3.4"
+        "phpstan/phpstan": "^2.1",
+        "phpunit/phpunit": "^11.5",
+        "rector/rector": "^2.0",
+        "shipmonk/name-collision-detector": "^2.1",
+        "symplify/easy-coding-standard": "^12.3"
     },
     "autoload": {
         "psr-4": {
@@ -59,6 +60,7 @@
     },
     "scripts": {
         "lint": [
+            "detect-collisions",
             "ecs",
             "phpstan analyse",
             "rector --dry-run"
@@ -67,8 +69,8 @@
             "ecs --fix",
             "rector"
         ],
-        "post-install-cmd": "config-setup",
-        "post-update-cmd": "config-setup",
+        "post-install-cmd": "config_setup.php",
+        "post-update-cmd": "config_setup.php",
         "test": "phpunit"
     }
 }
